Beta Fix - sidebar draggable z-index so it isn't over some windows; Beta Fix - adjust send to gamelog/popout for emded video to match video token send to

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -919,7 +919,7 @@ select#doorTypeSelectUVTT{
     width: 6px;
     height: calc(100vh - 30px);
     cursor: ew-resize;
-    z-index: 99999;
+    z-index: 80;
     background: transparent;
 }
 #avtt-sidebar-resize-handle:hover {
